--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-SimpleCache is written and maintained by Nicola Iarocci and
+SimpleObjectCache is written and maintained by Nicola Iarocci and
 various contributors:
 
 Development Lead
